[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/kanerix/doner-lang"
documentation = "https://github.com/kanerix/doner-lang"
repository = "https://github.com/kanerix/doner-lang"
authors = ["Kasper Jønsson <kas@lerpz.com>"]


[workspace.dependencies]
# Internal dependencies
doner-lexer = { path = "./crates/doner-lexer" }
doner-parser = { path = "./crates/doner-parser" }
# Other dependencies
anyhow = "1"
clap = "4"
clap-cargo = "0"
miette = "7"
nanoid = "0"
thiserror = "2"
tokio = "1"
tracing = "0"
tracing-subscriber = "0"
