[package]
name = "doner"
version.workspace = true
edition.workspace = true

[dependencies]
doner-eval = { workspace = true }
doner-lexer = { workspace = true }
doner-parser = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "cargo",
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "string",
    "suggestions",
    "usage",
] }
clap-cargo = { workspace = true, features = ["clap"] }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
